added readme description, modified css style

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Notifications</title>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
+   
         <div class="spacer">
                 <p class="header-text">Notifications</p>
             <div class="grey-box">
@@ -26,8 +28,9 @@
                     <p class="notification-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit
                         ut aliquam, purus sit amet luctus venenatis, lectus
                         magna fringilla urna.</p>
-                    <p class="notification-time-label">2h ago</p>
-                </div>
+                    <p class="notification-time-label">2h ago</p>                 
+                </div> 
+                <div class="delete-button-box"><button class="notification-delete-btn">Delete</button></div>
             </div>
 
             <div class="notification-box">
